--- a/MetaPlanner/MetaPlanner.csproj
+++ b/MetaPlanner/MetaPlanner.csproj
@@ -125,10 +125,10 @@
     <Compile Include="Model\Assignment.cs" />
     <Compile Include="Model\Bucket.cs" />
     <Compile Include="Model\Plan.cs" />
-    <Compile Include="Model\PlanManager.cs" />
     <Compile Include="Model\PTask.cs" />
     <Compile Include="Output\Writer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\AuthenticationConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -212,6 +212,18 @@
     <PackageReference Include="CsvHelper">
       <Version>15.0.5</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration">
+      <Version>5.0.0-preview.6.20305.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions">
+      <Version>5.0.0-preview.6.20305.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
+      <Version>5.0.0-preview.6.20305.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
+      <Version>5.0.0-preview.6.20305.6</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Graph">
       <Version>3.8.0</Version>
     </PackageReference>
@@ -231,6 +243,11 @@
       <Version>1.0.1.9</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="appsettings.json" />
+    <None Include="appsettings.production.json" />
+  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
