--- a/MetaPlanner/appsettings.json
+++ b/MetaPlanner/appsettings.json
@@ -1,7 +1,7 @@
 {
     "Instance": "https://login.microsoftonline.com/{0}",
     "ApiUrl": "https://graph.microsoft.com/",
-    "MSGraphURL": "https://graph.microsoft.com/v1.0/",
+    "MSGraphURL": "https://graph.microsoft.com/beta/",
     "Tenant": "usati.onmicrosoft.com",
     "ClientId": "4bfdbb39-433a-47f6-adfa-004095ac159f",
     "Scopes": "Group.Read.All , Group.ReadWrite.All , profile    , User.Read, User.Read.All, User.ReadBasic.All",
