--- a/MetaPlanner/appsettings.production.json
+++ b/MetaPlanner/appsettings.production.json
@@ -1,7 +1,7 @@
 {
     "Instance": "https://login.microsoftonline.com/{0}",
     "ApiUrl": "https://graph.microsoft.com/",
-    "MSGraphURL": "https://graph.microsoft.com/v1.0/",
+    "MSGraphURL": "https://graph.microsoft.com/beta/",
     "Tenant": "congenrep.onmicrosoft.com",
     "ClientId": "095ada9d-71d5-42b3-a962-28726a951818",
     "Scopes": "Group.Read.All , Group.ReadWrite.All , profile    , User.Read",
