New consentment for users :)

--- a/MetaPlanner/appsettings.production.json
+++ b/MetaPlanner/appsettings.production.json
@@ -4,7 +4,7 @@
     "MSGraphURL": "https://graph.microsoft.com/beta/",
     "Tenant": "congenrep.onmicrosoft.com",
     "ClientId": "095ada9d-71d5-42b3-a962-28726a951818",
-    "Scopes": "Group.Read.All , Group.ReadWrite.All , profile    , User.Read",
+    "Scopes": "Group.Read.All,Group.ReadWrite.All,profile,Sites.Read.All,Sites.ReadWrite.All,User.Read,User.ReadBasic.All",
     "ClientSecret": "[Enter here a client secret for your application]",
     "CertificateName": "Or instead of client secret: Enter here the name of a certificate (from the user cert store) as registered with your application]",
     "Site": "congenrep.sharepoint.com,47a643c0-1ade-4859-90af-36f0dac4ea1e,7ccd99da-5875-4876-bd3e-f3693cf37126",
