--- a/MetaPlanner/appsettings.json
+++ b/MetaPlanner/appsettings.json
@@ -4,7 +4,7 @@
     "MSGraphURL": "https://graph.microsoft.com/beta/",
     "Tenant": "usati.onmicrosoft.com",
     "ClientId": "4bfdbb39-433a-47f6-adfa-004095ac159f",
-    "Scopes": "Group.Read.All , Group.ReadWrite.All , profile    , User.Read, User.Read.All, User.ReadBasic.All",
+    "Scopes": "Group.Read.All,Group.ReadWrite.All,profile,Sites.Read.All,Sites.ReadWrite.All,User.Read,User.ReadBasic.All",
     "ClientSecret": "[Enter here a client secret for your application]",
     "CertificateName": "Or instead of client secret: Enter here the name of a certificate (from the user cert store) as registered with your application]",
     "Site": "congenrep.sharepoint.com,47a643c0-1ade-4859-90af-36f0dac4ea1e,7ccd99da-5875-4876-bd3e-f3693cf37126",
