--- a/MetaPlanner/MetaPlanner.csproj
+++ b/MetaPlanner/MetaPlanner.csproj
@@ -122,6 +122,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Control\Command.cs" />
     <Compile Include="Model\MetaPlannerAssignment.cs" />
     <Compile Include="Model\MetaPlannerBucket.cs" />
     <Compile Include="Model\MetaPlannerPlan.cs" />
