--- a/MetaPlanner/MetaPlanner.csproj
+++ b/MetaPlanner/MetaPlanner.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Control\Command.cs" />
     <Compile Include="Model\MetaPlannerAssignment.cs" />
     <Compile Include="Model\MetaPlannerBucket.cs" />
+    <Compile Include="Model\MetaPlannerHierarchy.cs" />
     <Compile Include="Model\MetaPlannerPlan.cs" />
     <Compile Include="Model\MetaPlannerTask.cs" />
     <Compile Include="Model\MetaPlannerUser.cs" />
